--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
   "dependencies": {
     "@types/argon2-browser": "^1.1.0",
     "@types/node": "^11.13.5",
-    "argon2-browser": "^1.5.3"
+    "@types/uuid": "^3.4.4",
+    "argon2-browser": "^1.5.3",
+    "uuid": "^3.3.2"
   }
 }
