--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,13 @@
 {
   "compilerOptions": {
+      "baseUrl": ".",
+      "paths": { "*": ["types/*"] },
     "outDir": "./dist/",
     "lib": ["dom", "dom.iterable", "esnext"],
     "noImplicitAny": true,
     "module": "esnext",
     "target": "es5",
     "jsx": "react",
-    "allowJs": true
+    "declaration": true,
   }
 }
