--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dashlane-js",
-  "version": "1.0.2",
+  "version": "1.0.9",
   "description": "A javascript library to fetch/add records from dashlane vault.",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -38,6 +38,7 @@
     "@types/node": "^11.13.5",
     "@types/uuid": "^3.4.4",
     "argon2-browser": "^1.5.3",
-    "uuid": "^3.3.2"
+    "uuid": "^3.3.2",
+    "xml-js": "^1.6.11"
   }
 }
