--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "dashlane-js",
-  "version": "1.1.3",
+  "version": "1.1.4",
   "description": "A javascript library to fetch/add records from dashlane vault.",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start:dev": "webpack-dev-server --open",
-    "start:node": "node dist/dashlane.node.js",
+    "start:node": "webpack && node dist/dashlane.node.js",
     "build": "webpack"
   },
   "main": "dist/dashlane.node.js",
@@ -29,6 +29,7 @@
   "author": "Sibtain Ali",
   "license": "ISC",
   "devDependencies": {
+    "node-loader": "^0.6.0",
     "ts-loader": "^5.3.3",
     "typescript": "^3.4.3",
     "webpack": "^4.30.0",
@@ -39,6 +40,7 @@
     "@types/argon2-browser": "^1.1.0",
     "@types/node": "^11.13.5",
     "@types/uuid": "^3.4.4",
+    "argon2": "^0.23.0",
     "argon2-browser": "^1.5.3",
     "form-data": "^2.3.3",
     "node-fetch": "^2.6.0",
