--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "dashlane-client",
-  "version": "1.0.0",
+  "name": "@desiclabs/dashlane-client",
+  "version": "1.0.2",
   "description": "A javascript library to decipher dashlane vault.",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
