--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@desiclabs/dashlane-client",
+  "name": "@privicy/dashlane-client",
   "version": "1.0.9",
   "description": "A javascript library to decipher dashlane vault.",
   "scripts": {
@@ -17,7 +17,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/DesicLabs/dashlane-client.git"
+    "url": "git+https://github.com/privicy/dashlane-client.git"
   },
   "keywords": [
     "dashlane",
